--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-test
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <title>Meine erste HTML-Seite</title>
+</head>
+<body>
+    <h1>Willkommen auf meiner Webseite!</h1>
+    <p>Das ist ein Beispiel für eine einfache HTML-Seite mit Text, Bild und Link.</p>
+
+    <img src="https://via.placeholder.com/300x200" alt="Beispielbild" width="300" height="200">
+
+    <p>Besuche <a href="https://www.wikipedia.org/" target="_blank">Wikipedia</a>, um mehr zu erfahren.</p>
+</body>
+</html>
