--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
-    emailjs.init("KNWV92DeDx99Zg1T0");
+    emailjs.init("GG7YHgtAyAtoBSF8z
   </script>
   <script src="script.js"></script>
 </body>
