--- a/index.html
+++ b/index.html
@@ -1,30 +1,58 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Kaufe MM2 Godlys günstig & sicher – dein Roblox-Shop für exklusive Items.">
+  <meta name="keywords" content="MM2, Godlys, Roblox, Shop, Robux, Items, günstig kaufen">
+  <meta name="robots" content="index, follow">
   <title>MM2 Godlys Shop</title>
-  <!-- Google Font: Luckiest Guy (Cartoon-Style) -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="background"></div>
+
+  <!-- Menüleiste -->
+  <nav class="navbar">
+    <div class="nav-brand">MM2Shop</div>
+    <ul class="nav-links">
+      <li><a href="https://mm2shop.github.io/login">Shop</a></li>
+      <li><a href="https://mm2shop.github.io/aboutus">Über uns</a></li>
+      <li><a href="https://mm2shop.github.io/contact">Kontakt</a></li>
+    </ul>
+  </nav>
+
   <header>
     <h1 class="title">MM2 Godlys günstig kaufen!</h1>
     <p class="tagline">Dein vertrauenswürdiger Robux-Shop</p>
   </header>
+
+  <!-- Diashow -->
+  <div class="slideshow-container">
+    <img class="slide" src="images/slide1.jpg" alt="MM2 Item 1">
+    <img class="slide" src="images/slide2.jpg" alt="MM2 Item 2">
+    <img class="slide" src="images/slide3.jpg" alt="MM2 Item 3">
+  </div>
+
   <main>
     <div class="buttons">
-      <a href="https://mm2shop.github.io/login" class="btn">Zum Shop</a>
-      <a href="https://mm2shop.github.io/aboutus" class="btn">Über uns</a>
-      <a href="https://mm2shop.github.io/contact" class="btn">Kontakt</a>
+      <a href="https://mm2shop.github.io/login" class="btn" role="button" aria-label="Zum Shop">Zum Shop</a>
+      <a href="https://mm2shop.github.io/aboutus" class="btn" role="button" aria-label="Über uns">Über uns</a>
+      <a href="https://mm2shop.github.io/contact" class="btn" role="button" aria-label="Kontakt">Kontakt</a>
+    </div>
+
+    <div class="trust">
+      <p>✅ 100% sicher über Roblox Group Transfers</p>
+      <p>🔒 Sichere Zahlung über Robux-Gutscheine</p>
     </div>
   </main>
+
   <footer>
     <p>© 2025 MM2Shop. Alle Rechte vorbehalten.</p>
   </footer>
+
   <script src="script.js" defer></script>
 </body>
 </html>
