--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
 								</button>
 							</a>
 						</div>
-						<img class="hero-img hero-img-1 floating delay" src="/images/items/Flowerwood.png" draggable="false" alt="Flowerwood" />
-						<img class="hero-img hero-img-20 floating" src="/images/items/Luger_Gold.png" draggable="false" alt="Luger Gold" />
-						<img class="hero-img hero-img-21 floating" src="/images/items/Luger_Gold.png" draggable="false" alt="Luger Gold" />
-						<img class="hero-img hero-img-4 floating delay" src="/images/items/Galactic.png" draggable="false" alt="Galactic" />
+						<img class="hero-img hero-img-1 floating delay" src="https://sellitems.gg/images/items/Flowerwood.png" draggable="false" alt="Flowerwood" />
+<img class="hero-img hero-img-20 floating" src="https://sellitems.gg/images/items/Luger_Gold.png" draggable="false" alt="Luger Gold" />
+<img class="hero-img hero-img-21 floating" src="https://sellitems.gg/images/items/Luger_Gold.png" draggable="false" alt="Luger Gold" />
+<img class="hero-img hero-img-4 floating delay" src="https://sellitems.gg/images/items/Galactic.png" draggable="false" alt="Galactic" />
+<img class="hero-img hero-img-5 floating delay" src="https://panel.sellitems.gg/storage/1723792080.4535.jpeg" draggable="false" alt="Custom Image" />
 					</div>
 					<div id="feature" class="container">
 						<div class="row">
